--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
     </div>
 </div>
 
-<!-- About Us Section -->
-<section id="about" class="section bg-light">
-    <div class="container text-center">
+<main class="container">
+    <!-- About Us Section -->
+<section id="about" class="section bg-success mt-2">
+    <div class=" text-center">
         <h2>About Us</h2>
         <p>Thera Spa and Wellness provides face and body massages, skin treatments, and naturopathy consultations. Our eco-friendly products and personalized services ensure a unique experience for every guest.</p>
     </div>
@@ -164,10 +165,11 @@
         </div>
     </div>
 </section>
+</main>
 
 <!-- Footer -->
-<footer class="footer">
-    <div class="container">
+<footer class="footer mb-0">
+    <div class="container ">
         <p>&copy; 2025 Thera Spa and Wellness. All rights reserved.</p>
         <p>Follow us on: 
             <a href="#" class="text-white">Facebook</a> | 
