--- a/index.html
+++ b/index.html
@@ -88,8 +88,6 @@
         <a href="#services" class="btn btn-custom btn-lg">Book a Service</a>
     </div>
 </div>
-
-<main class="container">
     <!-- About Us Section -->
 <section id="about" class="section bg-success mt-2">
     <div class=" text-center">
@@ -138,7 +136,7 @@
         <div class="row">
             <!-- Product 1 -->
             <div class="col-md-4 mb-3">
-                <div class="rounded shadow-sm bg-success text-white">
+                <div class="rounded shadow-lg bg-success text-white">
                     <img src="product1.jpg" alt="Eco-Friendly Lotion" class="img-fluid  rounded-top">
                     <h5 class="mt-3 p-2">Eco-Friendly Lotion</h5>
                     <p class="mt- p-2">Experience nature's touch with our eco-friendly lotion, made with organic ingredients to nourish your skin.</p>
@@ -165,7 +163,6 @@
         </div>
     </div>
 </section>
-</main>
 
 <!-- Footer -->
 <footer class="footer mb-0">
