--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thera Spa and Wellness</title>
+    <meta charset="UTF-8">
+    <title>Campus press spa</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Experience relaxation and rejuvenation at Thera Spa and Wellness. Explore our range of face and body massages, facial treatments, and eco-friendly products. Book services online as an individual, couple, or group. Embrace wellness today!">
+    <meta name="keywords" content="Thera Spa, wellness, spa services, body massages, facial treatments, naturopathy consultations, eco-friendly products, skincare, relaxation, spa booking, couples spa, group spa packages">
+    <meta name="author" content="Thera Spa and Wellness">
+    <meta name="robots" content="index, follow">    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
