--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
     <meta name="description" content="Experience relaxation and rejuvenation at Thera Spa and Wellness. Explore our range of face and body massages, facial treatments, and eco-friendly products. Book services online as an individual, couple, or group. Embrace wellness today!">
     <meta name="keywords" content="Thera Spa, wellness, spa services, body massages, facial treatments, naturopathy consultations, eco-friendly products, skincare, relaxation, spa booking, couples spa, group spa packages">
     <meta name="author" content="Thera Spa and Wellness">
-    <meta name="robots" content="index, follow">    
+    <meta name="robots" content="index, follow">
+    
+    <!-- Primary Meta Tags -->
+
+    <meta name="title" content="Campus press spa" />
+    <meta name="description" content="Experience relaxation and rejuvenation at Thera Spa and Wellness. Explore our range of face and body massages, facial treatments, and eco-friendly products. Book services online as an individual, couple, or group. Embrace wellness today!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://campus-press.vercel.app/" />
+    <meta property="og:title" content="Campus press spa" />
+    <meta property="og:description" content="Experience relaxation and rejuvenation at Thera Spa and Wellness. Explore our range of face and body massages, facial treatments, and eco-friendly products. Book services online as an individual, couple, or group. Embrace wellness today!" />
+    <meta property="og:image" content="https://campus-press.vercel.app/hero-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://campus-press.vercel.app/" />
+    <meta property="twitter:title" content="Campus press spa" />
+    <meta property="twitter:description" content="Experience relaxation and rejuvenation at Thera Spa and Wellness. Explore our range of face and body massages, facial treatments, and eco-friendly products. Book services online as an individual, couple, or group. Embrace wellness today!" />
+    <meta property="twitter:image" content="https://campus-press.vercel.app/hero-image.jpg" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
