--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <meta property="og:url" content="https://campus-press.vercel.app/" />
     <meta property="og:title" content="Campus press spa" />
     <meta property="og:description" content="Experience relaxation and rejuvenation at Thera Spa and Wellness. Explore our range of face and body massages, facial treatments, and eco-friendly products. Book services online as an individual, couple, or group. Embrace wellness today!" />
-    <meta property="og:image" content="https://campus-press.vercel.app/hero-image.jpg" />
+    <meta property="og:image" content="https://campus-press.vercel.app/logo.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://campus-press.vercel.app/" />
     <meta property="twitter:title" content="Campus press spa" />
     <meta property="twitter:description" content="Experience relaxation and rejuvenation at Thera Spa and Wellness. Explore our range of face and body massages, facial treatments, and eco-friendly products. Book services online as an individual, couple, or group. Embrace wellness today!" />
-    <meta property="twitter:image" content="https://campus-press.vercel.app/hero-image.jpg" />
+    <meta property="twitter:image" content="https://campus-press.vercel.app/logo.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <!-- Bootstrap CSS -->
