--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
             border-radius: 10px;
         }
         .footer {
-            background: #253D2C;
-            color: white;
+            background: #8deca9;
+            color: rgb(10, 10, 10);
             padding: 20px 0;
             text-align: center;
         }
         .navbar{
-            background-color: #253D2C;
-            color: white;
+            background-color: #62f18d;
+            color: rgb(15, 15, 15);
         }
         .btn-custom {
             background-color: #6c757d;
@@ -399,13 +399,15 @@ form:hover {
 <body style="background-color: #9af0b3;">
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg sticky-top">
+<nav class="navbar navbar-top navbar-expand-lg sticky-top">
     <div class="container">
-        <a class="navbar-brand text-white" href="#">Thera Spa</a>
-        <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"  style="color: white;">
+        <a class="navbar-brand text-white" href="#">
+            <img src="logo.jpeg" alt="Thera Spa Logo" class="img-fluid rounded-circle" style="max-height: 50px;">
+        </a>
+        <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" style="color: white;">
             <span class="navbar-toggler-icon" style="color: white;"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav"  style="color: white;">
+        <div class="collapse navbar-collapse" id="navbarNav" style="color: white;">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#services">Services</a>
@@ -436,7 +438,7 @@ form:hover {
     </div>
     
     <!-- About Us Section -->
-<section id="about" class="section bg-success mt-2">
+<section id="about" class="section bg-success mt-5">
     <div class="about-container">
       <div class="about-text animate-fade-in-left">
         <h2>About Us</h2>
